--- a/manifest.json
+++ b/manifest.json
@@ -1,50 +1,58 @@
 {
   "manifest_version": 3,
-  "name": "Manage - Personal Dashboard & Productivity",
+  "name": "Manage - Task & Notes Dashboard",
   "version": "1.0.0",
-  "description": "A comprehensive productivity extension with task management, notes, and AI-powered features",
+  "description": "A comprehensive task and note management dashboard with AI-powered features for better productivity",
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'",
+    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals"
+  },
   "permissions": [
     "storage",
     "activeTab",
-    "sidePanel",
-    "contextMenus",
-    "alarms",
     "scripting",
     "tabs"
   ],
-  "host_permissions": [
-    "https://*/*",
-    "http://*/*"
+  "optional_permissions": [
+    "sidePanel",
+    "contextMenus"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "models/*",
+        "assets/*",
+        "dist/*"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
   ],
   "chrome_url_overrides": {
-    "newtab": "newtab.html"
+    "newtab": "dist/newtab.html"
   },
   "side_panel": {
-    "default_path": "sidepanel.html"
+    "default_path": "dist/sidepanel.html"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "dist/background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js"],
-      "run_at": "document_idle"
+      "js": ["dist/contentScript.js"],
+      "run_at": "document_end"
     }
   ],
-  "action": {
-    "default_title": "Open Manage Tools",
-    "default_icon": {
-      "16": "icons/icon16.png"
-    }
-  },
   "icons": {
-    "16": "icons/icon16.png"
+    "16": "dist/icons/icon16.png"
   },
-  "web_accessible_resources": [
-    {
-      "resources": ["assets/*"],
-      "matches": ["<all_urls>"]
-    }
-  ]
+  "action": {
+    "default_icon": {
+      "16": "dist/icons/icon16.png"
+    },
+    "default_title": "Manage Dashboard"
+  }
 }
