--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,12 +22,17 @@
     "react-native-screens": "~3.22.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "react-native-vector-icons": "^10.0.0",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "firebase": "^12.3.0",
+    "@google/generative-ai": "^0.24.1",
+    "expo-constants": "^15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "~0.72.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "@expo/metro-config": "^0.17.5",
     "typescript": "^5.1.3"
   },
   "private": true
