--- a/extension/package.json
+++ b/extension/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.268",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
