--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,6 +33,7 @@
     "@types/react-native": "~0.72.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "@expo/metro-config": "^0.17.5",
+    "dotenv": "^16.4.5",
     "typescript": "^5.1.3"
   },
   "private": true
