--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,25 +7,22 @@
     "storage",
     "activeTab",
     "sidePanel",
-    "identity",
     "alarms",
     "geolocation",
     "scripting",
     "tabs",
     "notifications",
-    "contextMenus"
+    "contextMenus",
+    "webNavigation"
   ],
   "host_permissions": [
     "https://api.openweathermap.org/*",
     "https://newsapi.org/*",
     "https://generativelanguage.googleapis.com/*",
     "https://*.googleapis.com/*",
-    "https://*.firebaseio.com/*",
     "http://localhost:3000/*",
-    "*://*.youtube.com/*",
-    "*://*.amazon.com/*",
-    "*://*.ebay.com/*",
-    "*://*.booking.com/*"
+    "http://localhost:4000/*",
+    "https://*.example.com/*"
   ],
   "web_accessible_resources": [
     {
